k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chat-app

spec:
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      name: backend-pod
      labels:
        app: backend

    spec:
      containers:
        - name: backend-pod-cont
          image: mujeebllc/backend:latest

          ports:
            - containerPort: 5001

          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
